--- a/templates/create.html
+++ b/templates/create.html
@@ -8,12 +8,14 @@
     <title>Luo litterointi</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
-    <div>
-        <a href="/">Palaa etusivulle</a>
+    <div class="main-wrapper">
+        <div class="header">
+            {% include 'navigation.html' %}
+        </div>
         {% if session.user_id %}
         <div>
             <h2>Luo uusi litterointi</h2>
