--- a/templates/create.html
+++ b/templates/create.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div class="main-wrapper">
+    <div class="main-wrapper transcription-form-page">
         <div class="header">
             {% include 'navigation.html' %}
+
+            <h2>Luo uusi litterointi</h2>
         </div>
         {% if session.user_id %}
         <div>
-            <h2>Luo uusi litterointi</h2>
-
             <form onkeydown="return event.key != 'Enter';" action="/new_transcription" method="post"
                 enctype=multipart/form-data>
                 <p>
