--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,68 +3,78 @@
 
 <head>
   <title>Litteroinnin muokkaus</title>
+  <style>
+
+  </style>
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
-  <h1>Litteroinnin muokkaus</h1>
+  <div class="main-wrapper transcription-form-page">
+    <div class="header">
+      {% include 'navigation.html' %}
+      <h1>Litteroinnin muokkaus</h1>
+    </div>
 
-  <form onkeydown="return event.key != 'Enter';" action="/edit/{{ transcription.id }}" method="post"
-    enctype=multipart/form-data>
-    <p>
-      Otsikko:
-      <input type="text" size="90" maxlength="250" name="title" required value="{{transcription.title}}" />
-      <br />
-      Äänitiedoston nimi tai url:
-      <input type="text" size="60" maxlength="250" name="source_path" required value="{{transcription.source_path}}" />
-      <br />
 
-      Tekstityksen lähde:
-      <select name="source" id="source" value="{{transcription.source}}">
-        <option value="youtube" {% if transcription.source=='youtube' %} selected {% endif %}>Youtube auto captions
-        </option>
-        <option value="word" {% if transcription.source=='word' %} selected {% endif %}>Word transcribe</option>
-        <option value="webvtt" {% if transcription.source=='webvtt' %} selected {% endif %}>WebVTT</option>
+    <form onkeydown="return event.key != 'Enter';" action="/edit/{{ transcription.id }}" method="post"
+      enctype=multipart/form-data>
+      <p>
+        Otsikko:
+        <input type="text" size="90" maxlength="250" name="title" required value="{{transcription.title}}" />
+        <br />
+        Äänitiedoston nimi tai url:
+        <input type="text" size="60" maxlength="250" name="source_path" required
+          value="{{transcription.source_path}}" />
+        <br />
 
-      </select>
+        Tekstityksen lähde:
+        <select name="source" id="source" value="{{transcription.source}}">
+          <option value="youtube" {% if transcription.source=='youtube' %} selected {% endif %}>Youtube auto captions
+          </option>
+          <option value="word" {% if transcription.source=='word' %} selected {% endif %}>Word transcribe</option>
+          <option value="webvtt" {% if transcription.source=='webvtt' %} selected {% endif %}>WebVTT</option>
 
-      <br />
-      Lajityyppi:
-      <input type="text" name="genre" maxlength="100" value="{{transcription.genre}}" />
+        </select>
 
-      <br />
-      Tallenteen päivämäärä:
-      <input type="text" size="50" maxlength="30" name="record_date" value="{{transcription.record_date}}" />
+        <br />
+        Lajityyppi:
+        <input type="text" name="genre" maxlength="100" value="{{transcription.genre}}" />
 
-      <br />
-      Pituus ( h:m:s / sec):
-      <input type="text" size="50" pattern="[0-9:]*" maxlength="30" name="duration_sec"
-        value="{{transcription.duration_sec}}" />
+        <br />
+        Tallenteen päivämäärä:
+        <input type="text" size="50" maxlength="30" name="record_date" value="{{transcription.record_date}}" />
 
-      <br />
-      Lisenssi:
-      <input type="text" size="50" name="license" maxlength="100" value="{{transcription.license}}" />
-      <br />
-      Metadata:
-      <input type="text" size="50" name="extra_meta_data" maxlength="500" value="{{transcription.extra_meta_data}}" />
-      <br />
-      {% if transcription.user_id == session.user_id %}
-      Salli muiden käyttäjien muokata tätä litterointia:
-      <input type="checkbox" name="allow_collaboration" {% if transcription.allow_collaboration %} checked {% endif
-        %} />
-      <br />
-      {% endif %}
-      Lisää äänitiedosto:
-      <input type="file" name="file">
-      <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+        <br />
+        Pituus ( h:m:s / sec):
+        <input type="text" size="50" pattern="[0-9:]*" maxlength="30" name="duration_sec"
+          value="{{transcription.duration_sec}}" />
 
-    </p>
-    <p>
-      Aikaleimattu teksti<br />
-      <textarea name="raw_content" rows="10" cols="90">{{transcription.raw_content}}</textarea>
-    </p>
-    <input type="submit" value="Lähetä" /> <a href="/transcription/{{ transcription.id }}"> <input type="button"
-        value="Peruuta" /> </a>
-  </form>
+        <br />
+        Lisenssi:
+        <input type="text" size="50" name="license" maxlength="100" value="{{transcription.license}}" />
+        <br />
+        Metadata:
+        <input type="text" size="50" name="extra_meta_data" maxlength="500" value="{{transcription.extra_meta_data}}" />
+        <br />
+        {% if transcription.user_id == session.user_id %}
+        Salli muiden käyttäjien muokata tätä litterointia:
+        <input type="checkbox" name="allow_collaboration" {% if transcription.allow_collaboration %} checked {% endif
+          %} />
+        <br />
+        {% endif %}
+        Lisää äänitiedosto:
+        <input type="file" name="file">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+
+      </p>
+      <p>
+        Aikaleimattu teksti<br />
+        <textarea name="raw_content" rows="10" cols="90">{{transcription.raw_content}}</textarea>
+      </p>
+      <input type="submit" value="Lähetä" /> <a href="/transcription/{{ transcription.id }}"> <input type="button"
+          value="Peruuta" /> </a>
+    </form>
 </body>
 
 </html>
