create link from text rows search results to main transcription page where result is found with row background color highligh

--- a/static/styles.css
+++ b/static/styles.css
@@ -280,3 +280,7 @@ input[type="submit"][name="cancel"] {
     margin-left: 1rem;
     background-color: white;
 }
+
+table tr.highlighted-text-fragment {
+    background-color: #f8ea9f;
+}
